it works. It now uses the URI class for finding the domain/host of a url. It also uses Html Agility pack for finding links.

--- a/SearchEngine/SearchEngine.csproj
+++ b/SearchEngine/SearchEngine.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Indexer\Indexer.cs" />
+    <Compile Include="UtilityClasses\Utility.cs" />
     <Compile Include="WebCrawler\DuplicatePageChecker.cs" />
     <Compile Include="WebCrawler\PageDB.cs" />
     <Compile Include="WebCrawler\DuplicateURLChecker.cs" />
