So the new index should now contain information about term-frequency.

--- a/SearchEngine/SearchEngine.csproj
+++ b/SearchEngine/SearchEngine.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Indexer\PageRetriever.cs" />
     <Compile Include="Indexer\TermConstructor.cs" />
     <Compile Include="Indexer\Tokenizer.cs" />
+    <Compile Include="Pair.cs" />
+    <Compile Include="Ranker\Ranker.cs" />
     <Compile Include="UtilityClasses\Utility.cs" />
     <Compile Include="WebCrawler\DuplicatePageChecker.cs" />
     <Compile Include="WebCrawler\PageDB.cs" />
